more changes to roll back to java 11